Update pages left: 24

--- a/TODO.txt
+++ b/TODO.txt
@@ -176,8 +176,8 @@ Project Status Pages left:
     124 - - - - - - - -
     125 - - - - - - - -
     126 - - - - - - - -
-    127 - - - - - - - -
-    128 - - - - - - - -
+    127 T - - - - - - - RWTSTWO n/a
+    128 n/a             TEMPY
     129 n/a             TRASH (dup of FLOCSEC)
     130 n/a             TRASH (dup of FLOCSEC)
     131 n/a             TRASH (dup of FLOCSEC)
@@ -185,7 +185,7 @@ Project Status Pages left:
     133 n/a             TRASH (dup of FLOCSEC)
     134 T - - - - - - - WRITADR $3C56
     135 - - - - - - - - WRITADR $3C57
-    136 - - - - - - - -
+    136 T - - - - - - - WRITADR $3CD7
     137 - - - - - - - -
     138 - - - - - - - -
     139 T - - - - - - - WRITRTN $38B8
@@ -216,6 +216,6 @@ Project Status Pages left:
         1st 3rd
           2nd 4th
 
-1st pass Remaining: 27
+1st pass Remaining: 24
 -->
 
