--- a/TODO.txt
+++ b/TODO.txt
@@ -165,9 +165,9 @@ Project Status Pages left:
     113 T - - - - - - - RELOCTR
     114 T - - - - - - - RELOCTR
     115 T - - - - - - - RELOCTR
-    116 - - - - - - - - RWTSONE $3D00
-    117 - - - - - - - - RWTSONE
-    118 - - - - - - - - RWTSONE
+    116 T - - - - - - - RWTSONE $3D00
+    117 T - - - - - - - RWTSONE $3D00
+    118 - - - - - - - - RWTSONE $3D00
     119 - - - - - - - - RWTSONE
     120 T - - - - - - - RWTSONE $3D4E
     121 T - - - - - - - RWTSONE $3D9A
