--- a/TODO.txt
+++ b/TODO.txt
@@ -152,10 +152,10 @@ Project Status Pages left:
      99 T - - - - - - - MSWAITR $3A69
     100 T - - - - - - - MSWAITR $3AF0
     101 T - - - - - - - POSTNRD $38C2
-    102 - - - - - - - -
-    103 - - - - - - - -
-    104 - - - - - - - -
-    105 - - - - - - - -
+    102 T - - - - - - - POSTNRD $38D3
+    103 T - - - - - - - POSTNRD $38DF
+    104 T - - - - - - - PRENIBL $3800
+    105 T - - - - - - - PRENIBL $3827
     106 T - - - - - - - RDADSEK $3944
     107 T - - - - - - - RDADSEK $3944
     108 T - - - - - - - RDADSEK $39A0
@@ -217,6 +217,6 @@ Project Status Pages left:
         1st 3rd
           2nd 4th
 
-1st pass Remaining: 6
+1st pass Remaining: 2
 -->
 
