--- a/TODO.txt
+++ b/TODO.txt
@@ -168,8 +168,8 @@ Project Status Pages left:
     115 T - - - - - - - RELOCTR
     116 T - - - - - - - RWTSONE $3D00
     117 T - - - - - - - RWTSONE $3D00
-    118 - - - - - - - - RWTSONE $3D00
-    119 - - - - - - - - RWTSONE
+    118 T - - - - - - - RWTSONE $3D00
+    119 T - - - - - - - RWTSONE
     120 T - - - - - - - RWTSONE $3D4E
     121 T - - - - - - - RWTSONE $3D9A
     122 T - - - - - - - RWTSTWO $3DAB
